feat: generate SQL from a validated query (composite WHERE, named bind parameters)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>